# terramind-arctic-sea-ice

./: .gitignore  README.md  pyproject.toml  setup.py
config/arctic_sea_ice/: default.yaml  floe.yaml  floe_tim.yaml  floe_unet.yaml  sic.yaml  sic_lora.yaml  sic_tim.yaml  sic_unet.yaml  sod.yaml  sod_tim.yaml  sod_unet.yaml
config/sen1floods11/: default.yaml
scripts/: compare_models.py  predict.py  terratorch_floe_inference.sh  terratorch_floe_tim_inference.sh  terratorch_floe_unet_inference.sh  terratorch_gpu_fit_any.sh  terratorch_sic_inference.sh  terratorch_sic_tim_inference.sh  terratorch_sic_unet_inference.sh  terratorch_sod_inference.sh  terratorch_sod_tim_inference.sh  terratorch_sod_unet_inference.sh  terratorch_vader_fit.sh  tmp.sh
src/: utils.py
src/datasets/: arctic_sea_ice.py
