[project]
name = "terramind-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdf>=2023.12.4",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pip>=26.0",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "terratorch>=1.2.1",
    "wandb>=0.24.1",
    "xarray>=2026.1.0",
]
